@@ -83,8 +83,8 @@ D/smsc////
 /dlr.h/1.23/Tue Apr  3 14:27:44 2007//
 /sms.c/1.26/Wed Apr 11 17:19:01 2007//
 /smsbox.c/1.274/Wed Apr 11 18:34:19 2007//
-/bb_boxc.c/1.90/Wed Mar 21 21:40:05 2007//
 /bb_smscconn.c/1.92/Wed Mar 21 22:20:18 2007//
 /bb_smscconn_cb.h/1.16/Wed Mar 21 21:41:50 2007//
 /bearerbox.c/1.165/Wed Mar 21 22:13:55 2007//
 /bearerbox.h/1.32/Wed Mar 21 21:34:24 2007//
+/bb_boxc.c/1.90/Tue May 15 18:11:02 2007//
