@@ -3,7 +3,6 @@
 /accesslog.h/1.8/Sun Jan 14 19:21:31 2007//
 /cfg.c/1.36/Tue Jan 30 23:54:36 2007//
 /cfg.h/1.17/Tue Jan 30 23:54:36 2007//
-/charset.c/1.25/Sun Jan 14 19:21:31 2007//
 /charset.h/1.16/Sun Jan 14 19:21:31 2007//
 /conn.c/1.85/Sun Jan 14 19:21:31 2007//
 /conn.h/1.33/Sun Jan 14 19:21:31 2007//
@@ -25,7 +24,6 @@
 /fdset.c/1.12/Sun Jan 14 19:21:31 2007//
 /fdset.h/1.6/Sun Jan 14 19:21:31 2007//
 /gw-getopt.h/1.6/Sun Jan 14 19:21:32 2007//
-/gw-prioqueue.c/1.6/Sun Jan 14 19:21:31 2007//
 /gw-prioqueue.h/1.3/Sun Jan 14 19:21:31 2007//
 /gw-rwlock.c/1.9/Sun Jan 14 19:21:32 2007//
 /gw-rwlock.h/1.6/Sun Jan 14 19:21:32 2007//
@@ -45,8 +43,6 @@
 /http.c/1.248/Sun Jan 14 19:21:31 2007//
 /http.h/1.70/Sun Jan 14 19:21:31 2007//
 /latin1_to_gsm.h/1.1/Sat Oct  7 15:18:04 2006//
-/list.c/1.45/Sun Jan 14 19:21:31 2007//
-/list.h/1.26/Sun Jan 14 19:21:31 2007//
 /log.h/1.24/Sun Jan 14 19:21:32 2007//
 /md5.c/1.8/Sun Jan 14 19:21:31 2007//
 /md5.h/1.7/Sun Jan 14 19:21:31 2007//
@@ -81,4 +77,8 @@
 /cfg.def/1.128/Wed Mar 21 22:22:14 2007//
 /gwlib.c/1.24/Wed May  9 09:11:24 2007//
 /log.c/1.53/Wed May  9 09:11:17 2007//
+/list.h/1.27/Tue May 15 16:15:00 2007//
+/charset.c/1.26/Fri May 18 12:33:41 2007//
+/gw-prioqueue.c/1.6/Tue May 15 14:37:39 2007//
+/list.c/1.47/Fri May 18 12:32:03 2007//
 D
